# mcp-server-client

./: .env  README.md  pyproject.toml
client/: db_client.py
server/: postgres_db.py  weather.py
